--- a/themes/unc_charlotte4/sass/layouts/default_inner/default_inner.layout.scss
+++ b/themes/unc_charlotte4/sass/layouts/default_inner/default_inner.layout.scss
@@ -56,9 +56,7 @@ html{
 			}
 			.l-main{
 				//default styles for the main content area
-				p{
-					@include font(300,16px,16px,Arial);
-				}
+				p{}
 				h1{}
 				h2{}
 				h3{}
