--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -148,7 +148,8 @@ body {
     position: relative;
     z-index: 997;
     background: #eee;
-    border-bottom: 8px solid #bea848; }
+    border-bottom: 8px solid #bea848;
+    min-height: 100vh; }
     body.front #a2 .wrapper {
       max-width: 1200px;
       padding: 0 10px;
@@ -157,7 +158,8 @@ body {
   body.front #a3 {
     position: relative;
     z-index: 996;
-    background: #eee; }
+    background: #eee;
+    min-height: 100vh; }
     body.front #a3 .wrapper {
       max-width: 1200px;
       padding: 0 10px;
@@ -1020,6 +1022,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
         display: none;
         -webkit-transition: left 3s;
         transition: left 3s;
+        padding-top: 20vw;
         display: block;
         max-width: 40%; }
         .block--views-events-block-1 .block__content .view-events .view-header.open {
