--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -1020,8 +1020,8 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
         left: -400px;
         max-width: 60%;
         display: none;
-        -webkit-transition: left 3s;
-        transition: left 3s;
+        -webkit-transition: left 2s ease-in-out;
+        transition: left 2s ease-in-out;
         padding-top: 20vw;
         display: block;
         max-width: 40%; }
