--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -134,7 +134,7 @@ body {
   body.front #a1 {
     z-index: 998;
     background: white;
-    border-bottom: 8px solid #bea848;
+    border-bottom: 8px solid #444;
     position: relative;
     /* 			&:after{
     				content:'';
@@ -148,7 +148,7 @@ body {
     position: relative;
     z-index: 997;
     background: #eee;
-    border-bottom: 8px solid #bea848;
+    border-bottom: 5px solid #444;
     min-height: 100vh; }
     body.front #a2 .wrapper {
       max-width: 1200px;
